update with uri